--- a/src/Footer.css
+++ b/src/Footer.css
@@ -8,7 +8,7 @@
 /* Footer */
 .footer-container {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 71vw; /* roughly 1024/1440 */
   max-height: 1024px;
   background: #FFFFFF;
