--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
+html, body {
   margin: 0;
+  padding: 0;
   background-color: #FFFFFF;
   min-height: 100vh;
+  width: 100%;
   overflow-x: hidden;
 }
 
